plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.likelionsns'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.mysql:mysql-connector-j:8.0.31'
    implementation 'org.springframework.boot:spring-boot-devtools:2.5.3'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation "io.springfox:springfox-boot-starter:3.0.0"

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-test'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'

    // Kafka
    implementation "org.springframework.kafka:spring-kafka"

    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // guava
    implementation("com.google.guava:guava:31.1-jre")

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'javax.servlet:jstl'

    implementation "org.apache.tomcat.embed:tomcat-embed-jasper"

    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'


}

tasks.named('test') {
    useJUnitPlatform()
}
